api changes in events, move Listener serialization into Util class

--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,10 @@
         </plugins>
     </build>
     <modules>
+        <!-- Main modules -->
         <module>RedisBungee-API</module>
         <module>RedisBungee-Bungee</module>
         <module>RedisBungee-Velocity</module>
-    </modules>
+   </modules>
 
 </project>
