--- a/RedisBungee-API/src/main/resources/config.yml
+++ b/RedisBungee-API/src/main/resources/config.yml
@@ -68,5 +68,10 @@ override-bungee-commands: false
 # restart scripts.
 exempt-ip-addresses: []
 
+# restore old login when online behavior before 0.9.0 update
+# uncomment to enable it
+
+# disable-kick-when-online: true
+
 # Config version DO NOT CHANGE!!!!
 config-version: 1
