update to gradle

--- a/RedisBungee-Bungee/src/main/resources/plugin.yml
+++ b/RedisBungee-Bungee/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: RedisBungee
 main: com.imaginarycode.minecraft.redisbungee.RedisBungee
-version: ${project.parent.version}
+version: *{redisbungee.version}*
 author: "astei, ProxioDev"
 # This is used so that we can automatically override default BungeeCord behavior.
 softDepends: ["cmd_find", "cmd_list"]
