--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Build with gradle
-      run: ./gradlew build -Dbranch=${{ github.ref }}
+      run: ./gradlew build -Dbranch=$GITHUB_REF_NAME
     - name: shadowJar with gradle
       run: ./gradlew shadowJar
     - name: Upload Bungee
