--- a/RedisBungee-API/src/main/resources/messages.yml
+++ b/RedisBungee-API/src/main/resources/messages.yml
@@ -1,2 +1,3 @@
 logged-in-other-location: "§cYou logged in from another location!"
 already-logged-in: "§cYou are already logged in!"
+error: "§cError has occurred"
